<resources>
    <string name="weather_api_key">debd5815e147d711956903e31432cf66</string>
    <string name="google_api_key">AIzaSyB_lkBxXYZaedrRs71WzYtvOEOXThFIVNA</string>
    <string name="google_server_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB_lkBxXYZaedrRs71WzYtvOEOXThFIVNA</string>
    <string name="google_app_id">1:568270559912:android:3dbc6e84ccf79845</string>
    <string name="app_name">Top Security KZ</string>
    <string name="title_activity_splash_screen">Стартовый экран</string>
    <string name="location_changed">location changed</string>
    <string name="splash_screen_loading">Загрузка...</string>
    <string name="sign_up"><u>Пройти регистрацию</u></string>
    <string name="title_activity_login">Авторизация</string>
    <string name="auth_text">Авторизация\nпользователя</string>
    <string name="telephone_number">Телефонный номер</string>
    <string name="password">Пароль</string>
    <string name="placeholder_registration_password">********</string>
    <string name="login">Войти</string>
    <string name="title_activity_register">Регистрация</string>
    <string name="reg_text">Регистрация</string>
    <string name="privacy_policy">Подписавшись, Вы соглашаетесь с Условиями использования приложения</string>
    <string name="username">Имя</string>
    <string name="placeholder_registration_username">Ваше имя</string>
    <string name="lastname">Фамилия</string>
    <string name="placeholder_lastname">Ваша фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="placeholder_patronymic">Ваше отчество</string>
    <string name="user_iin">ИИН</string>
    <string name="email">Email</string>
    <string name="register">Зарегистрироваться</string>
    <string name="please_wait">Пожалуйста, подождите...</string>
    <string name="data_is_processing">Мы обрабатываем Ваши данные</string>
    <string name="title_activity_main">Главный экран</string>
    <string name="minimize_app">Свернуть приложение</string>
    <string name="call_alert">Вызвать тревогу</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Открыть шторку</string>
    <string name="navigation_drawer_close">Закрыть шторку</string>
    <string name="nav_header_title">Ф.И.О</string>
    <string name="nav_header_subtitle">email</string>
    <string name="nav_header_desc">описание</string>
    <string name="action_settings">Настройки</string>
    <string name="profile">Личный кабинет</string>
    <string name="placeholder_username">Нет данных</string>
    <string name="placeholder_user_phone">+7 700 000 00 00</string>
    <string name="placeholder_email">test@gmail.com</string>
    <string name="placeholder_password">qwerty123456</string>
    <string name="payment">Подписка</string>
    <string name="settings">Настройки</string>
    <string name="title_activity_profile">Профиль</string>
    <string name="sign_in">Войти</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="placeholder_password_error">Пароль должен содержать более 6 символов</string>
    <string name="are_you_sure_cancel_alert">Вы действительно хотите отменить тревогу?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="are_you_sure_delete_acc">Вы действительно хотите удалить свой аккаунт?</string>
    <string name="title_activity_edit_password">Изменить пароль</string>
    <string name="title_activity_edit_email">Изменить email</string>
    <string name="current_password">Текущий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_new_password">Повторить пароль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="password_length_error">Пароль должен содержать не менее 6 символов</string>
    <string name="phone_length_error">Номер телефона должен содержать 11 цифр</string>
    <string name="user_iin_length_error">ИИН должен содержать 12 цифр</string>
    <string name="field_cant_be_empty">Поле не может быть пустым</string>
    <string name="email_format_error">Формат почты неправильный</string>
    <string name="permission_denied_explanation">Доступ запрещен</string>
    <string name="permission_rationale">Требуется разрешение на использования данных локаций для вызова тревоги</string>
    <string name="tracker_is_active">Слежка включена</string>
    <string name="service_active">Трекер активен</string>
    <string name="cancel">Отмена</string>
    <string name="alert">ТРЕВОГА</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="tracking_service">Местоположение</string>
    <string name="volume_btn">Быстрый вызов</string>
    <string name="volume_button_direction">Тип кнопки</string>
    <string name="volume_button_direction_up">Активация по зажатию кнопки громкости в нижнем положении</string>
    <string name="volume_button_direction_down">Активация по зажатию кнопки громкости в верхнем положении</string>
    <string name="direction_down">Вниз</string>
    <string name="direction_up">Вверх</string>
    <string name="volume_btn_click_rate">Кол-во нажатий</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="you_cant_when_alert_active">При активной тревоге Вы не можете использовать данную функцию</string>
    <string name="you_cant_when_your_photo_not_exist_on_server">Ваша фотография отсутвует на сервере. Выберите фотографию в галерее или снимите на камеру</string>
    <string name="title_service_not_active">Слежка неактивна</string>
    <string name="msg_service_not_active">Слежка отключена. Чтобы вызвать тревогу включите слежку</string>
    <string name="msg_turn_on_tracking_service">Cначала включите слежку</string>
    <string name="turn_on">Включить</string>
    <string name="title_alert_no_internet">Интернет</string>
    <string name="msg_alert_no_internet">Включите интернет</string>
    <string name="btn_label_refresh">Обновить</string>
    <string name="title_alert_no_gps">Геолокация</string>
    <string name="msg_alert_no_gps">Включите gps</string>
    <string name="unable_to_login">Не удалось авторизоваться</string>
    <string name="not_implemented">На стадии разработки</string>
    <string name="error_from_server">Запрос не удался</string>
    <string name="failed_to_send_alert">Не удалось отправить тревогу</string>
    <string name="failed_to_cancel_alert">Не удалось отменить тревогу</string>
    <string name="title_activity_place">Места</string>
    <string name="title_activity_maps">Карта</string>
    <string name="radius_label">Радиус</string>
    <string name="placeholder_radius">500 м</string>
    <string name="place_list_label">Места</string>
    <string name="place_name_label">Название</string>
    <string name="place_description">Описание</string>
    <string name="unable_to_save_place">Не удалось сохранить место</string>
    <string name="place_neme_is_empty">Название места пустое</string>
    <string name="title_activity_trusted_numbers">Доверенные номера</string>
    <string name="contacts_load_error">Не удалось получить список контактов</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="action_places">Места</string>
    <string name="action_contacts">Контакты</string>
    <string name="create">Создать</string>
    <string name="wait_calibration">Невозможно отправить тревогу до завершения калибровки</string>
    <string name="choose_place">Выберите место на карте</string>
    <string name="title_activity_crop_picture_activiry">Редактировать</string>
    <string name="load_image_error">Не удалось загрузить изображение</string>
    <string name="permission_crop_rationale">Необходим доступ для обрезки фотографии</string>
    <string name="permission_camera">Необходим доступ к камеры для загрузки фотографии</string>
    <string name="button_allow">Разрешить</string>
    <string name="button_deny">Отмена</string>
    <string name="new_email">Новый email</string>
    <string name="correct_errors">Исправьте ошибки</string>
    <string name="forget_password"><u>Забыли пароль?</u></string>
    <string name="no_location_data">Нет данных по локации</string>
    <string name="password_do_not_match">Пароли не совпадают</string>
    <string name="password_changed_successfully">Пароль успешно изменен</string>
    <string name="email_changed_successfully">Email успешно изменен</string>
    <string name="service_description">Включите для того, чтобы иметь возможность вызвать тревогу с помощью кнопок громкости</string>
    <string name="service_summary"></string>
    <string name="place_delete_failed">Не удалось удалить место</string>
    <string name="delete">Удалить</string>
    <string name="edit">Изменить</string>
    <string name="are_you_sure_delete">Вы действительно хотите удалить?</string>
    <string name="are_you_sure_delete_contact">Вы действительно хотите удалить контакт?</string>
    <string name="contacts">Контакты</string>
    <string name="places">Места</string>
    <string name="wrong_password_code">Неправильный пароль</string>
    <string name="not_authenticated_code">Вы не авторизованы</string>
    <string name="user_not_found_code">Пользователь не найден, либо не правильный пароль</string>
    <string name="already_authenticate_code">Вы уже авторизованы</string>
    <string name="successful_authenticate_code">Авторизация прошла успешно</string>
    <string name="successful_registered_code">Регистрация прошла успешно</string>
    <string name="password_missmatch_code">Пароль не совпадает</string>
    <string name="password_successful_changed_code">Пароль успешно изменен</string>
    <string name="profile_successful_saved_code">Редактирование профиля прошло успешно</string>
    <string name="photo_successful_updated_code">Фотография успешно изменена</string>
    <string name="photo_successful_saved_code">Фотография успешно сохранена</string>
    <string name="secret_success_saved_code">Защитный код успешно создан</string>
    <string name="device_already_linked_code">Устройство уже привязано к другому аккаунту</string>
    <string name="concurrency_error_code"> </string>
    <string name="successful_created_code"> </string>
    <string name="successful_updated_code"> </string>
    <string name="successful_accepted_code"> </string>
    <string name="internal_error_code"> </string>
    <string name="validation_error_code">Введенные данные неверны</string>
    <string name="action_not_found_code">Неправильный код</string>
    <string name="action_is_expired_code">Время действия данного кода истекло</string>
    <string name="alert_not_exists_code">Тревога неактивна</string>
    <string name="alert_is_exists_code">Тревога активна</string>
    <string name="alert_successful_created_code">Тревога успешно отправлена</string>
    <string name="alert_successful_checked_code"> </string>
    <string name="technical_issues_label">По техническим вопросам</string>
    <string name="contacts_email_for_technical_issues">support@topsecurity.kz</string>
    <string name="to_phone_number">Номер телефона</string>
    <string name="internal_number">Внутренний номер</string>
    <string name="contacts_phone_for_other_issues">+7(727)311-24-81</string>
    <string name="contacts_internal_number_for_other_issues">812</string>
    <string name="company_name">ТОО «Top Security KZ»</string>
    <string name="main_address">Адрес: Республика Казахстан, г.Алматы, мкр.Алатау, ул.Асемтау 58</string>
    <string name="about_and_feedback">Обратная связь</string>
    <string name="place_holder_app_version">Версия: N.N</string>
    <string name="place_holder_app_update_date">Дата обновления: dd.mm.yy</string>
    <string name="text_about_app">О приложении</string>
    <string name="text_instruction">Инструкция</string>
    <string name="text_copyright">© 2018 “Top Security KZ”</string>
    <string name="text_user_agreement">Пользовательское соглашение</string>
</resources>