<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="25dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_dialog_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/are_you_sure_delete"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="0px"/>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_ok"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:textColor="@drawable/gray_button_cornered_text_color_selector"
            android:background="@drawable/circle_cornered_gray_button_bg"
            android:text="@string/yes"
            android:layout_marginEnd="5dp" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:textColor="@drawable/gray_button_cornered_text_color_selector"
            android:background="@drawable/circle_cornered_gray_button_bg"
            android:text="@string/no"
            android:layout_marginStart="5dp" />
    </LinearLayout>
</LinearLayout>
